--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,12 +1,14 @@
 ---
+ler53_install_requirements: false
 ler53_cert_remaining_days_before_renewal: 10
 ler53_cert_common_name: "{{ ansible_fqdn }}"
 ler53_cert_sans: []
 ler53_cert_key_usages:
-- digitalSignature
-- keyEncipherment
+  - digitalSignature
+  - keyEncipherment
 ler53_key_size: 2048
-ler53_cert_dir: "/etc/ssl/{{ ler53_cert_common_name }}"
+ler53_base_dir: "/etc/ssl"
+ler53_cert_dir: "{{ ler53_base_dir}}/{{ ler53_cert_common_name }}"
 ler53_key_file_name: "{{ ler53_cert_common_name }}.key"
 ler53_cert_file_name: "{{ ler53_cert_common_name }}.crt"
 ler53_csr_file_name: "{{ ler53_cert_common_name }}.csr"
@@ -14,11 +16,11 @@ ler53_intermediate_download: true
 ler53_intermediate_file_name: "{{ ler53_cert_common_name }}.intermediate.crt"
 ler53_cert_and_intermediate_file_name: "{{ ler53_cert_common_name }}.pem"
 ler53_cert_files_mode: 0600
-ler53_cert_files_owner: root
-ler53_cert_files_group: root
-ler53_account_email: ''
+ler53_files_owner: "{{ ansible_user_uid }}"
+ler53_files_group: "{{ ansible_user_gid }}"
+ler53_account_email: ""
 ler53_account_key_size: 2048
-ler53_account_key_dir: /etc/ssl/lets_encrypt
+ler53_account_key_dir: "{{ ler53_base_dir}}/lets_encrypt"
 ler53_account_key_file_name: lets_encrypt_account.key
 ler53_new_cert_when_csr_changes: false
 ler53_service_handlers: []
