Fixed tests dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,10 @@ envlist = molecule
 skipsdist = true
 
 [testenv:molecule]
-deps = molecule[docker]
+deps = 
+  molecule[docker]~=3.0
+  requests
+  testinfra
 passenv =
   HOME
   SSH_AUTH_SOCK
