tox: update deprecated syntax

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
-envlist = molecule
-skipsdist = true
+env_list = molecule
+skip_sdist = true
 
 [testenv:molecule]
 deps = 
   molecule[docker]~=3.0
   requests
   testinfra
-passenv =
+pass_env =
   HOME
   SSH_AUTH_SOCK
   TERM
